--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "git+https://github.com/Shahlovez/mern_ecommerce.git"
   },
   "author": "shahlovezniyazova",
-  "license": "MIT",
+  "license": "",
   "bugs": {
     "url": "https://github.com/Shahlovez/mern_ecommerce/issues"
   },
