--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,13 @@
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^18.0.0",
+    "react-redux": "^8.0.0",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.0",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
