--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^18.0.0",
+    "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^8.0.0",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^5.3.0",
