--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "react-redux": "^8.0.0",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "^4.0.3",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
@@ -45,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "autoprefixer": "10.4.5"
   }
 }
